# comipler

./: CMakeLists.txt  README.md  example.txt
bld/: .ninja_deps  .ninja_log  build.ninja  func  rules.ninja
src/: main.c
